# VirtualChef-keb2025

./: CMakeLists.txt  OBSOLETEmain.cpp  main.cpp  readme.md
data/: ingredients.txt  recipes.json
include/: ingredient.hpp  recipe.hpp  recipeManager.hpp  utils.hpp
src/: main.cpp  recipe.cpp  recipeManager.cpp  trim.cpp  utils.cpp
